# wide-robot

./: .gitignore  Causal_Skill_Graph_V0.md  LICENSE  README.md  physical_quotient.md  pyproject.toml  roadmap.md  state.md  thesis.md
.github/workflows/: ci.yml  mujoco.yml  release.yml
CSG_Matcher/: csg_matcher.md  csg_matcher.py  robot_csg_diverge.json
CSG_Solver_Harness/: DEPRECATED.md  benchmark_runner.py  csg_common.py  csg_matcher.py  csg_solver.py  csg_to_sim.py  human_csg_min.json  robot_csg_min.json  rollout_to_csg.py  skill_skeleton.py
csg/: __init__.py  benchmark.py  canon.py  common.py  matcher.py  predicates.py  release_audit.py  release_manifest.py  release_rehearsal.py  rollout_extract.py  rollout_schema.md  skills.py  solver.py  to_sim.py  validity.md  verify_release.py
csg/backends/: __init__.py
datasets/rh20t_object_inside_container_v0/: manifest.json
datasets/sony_object_inside_container_v0/: INGESTION_RESULTS.md  manifest.json  verdicts_all.json  verdicts_smoke.json
docs/: dataset_publishing_runbook.md  phase_3a_real_camera_handoff.md  release_checklist.md  rlbench_external_trace_pilot.md  sim_only_benchmark_report.md
experiments/: __init__.py
experiments/baseline_counterexamples/: README.md  __init__.py  b6_vs_structured.json  baseline_predicates.py  cross_task.py  engineering_cost.json  fixtures.py  independent_geometry_check.json  reproducibility_check.json  results_table.csv  results_table.md
experiments/cross_source_oic/: README.md  __init__.py  cross_source_report.json  cross_source_report.md  leakage_report.json  legs.py  source_manifest.json  summary.csv  target_equivalence.json  target_equivalence.py
gold_invalid/: open_drawer_overlimit_articulation.json  place_on_top_penetrate_goal.json  place_on_top_wrong_event_order.json  place_on_top_wrong_relation.json  push_object_missing_contact.json  put_cube_in_tray_early_release.json  put_cube_in_tray_impossible_reach.json  put_cube_in_tray_teleport_after_release.json  put_cube_in_tray_wide_grasp.json
gold_tests/insert_object/: expected.json  robot_left_on_rim.json  robot_success.json  target.json
gold_tests/open_drawer/: expected.json  robot_success.json  target.json
gold_tests/place_on_top/: expected.json  robot_success.json  robot_wrong_relation.json  target.json
gold_tests/push_object/: expected.json  robot_grasped.json  robot_success.json  target.json
gold_tests/put_cube_in_tray/: expected.json  robot_missing_contact.json  robot_removed_at_end.json  robot_success.json  robot_wrong_order.json  robot_wrong_relation.json  target.json
pilots/: __init__.py  external_rollout.py  external_verify.py
pilots/real_camera/: README.md  __init__.py  author_calibration.py  calibrate_table.py  manual_calibration.py  marker_tracker.py  track_postprocess.py  tracks_to_rollout.py  verify_episode.py  video_to_tracks.py  visualize_episode.py
pilots/rh20t/: README.md  __init__.py  annotations_schema.md  annotations_to_tracks.py  tracks_to_rollout.py  verify_episode.py
pilots/rlbench/: __init__.py  adapter.py  adapter_object_inside_container.py  record_open_drawer.py  record_put_item_in_drawer.py  run_external.py  summarize_reruns.py
recordings/: README.md  SHA256SUMS  labels.csv  manifest.json
scripts/: build_baseline_counterexamples.py  build_cross_source_report.py  clean_clone_rehearsal.sh  ingest_recordings.py  make_apriltag_print_sheet.py
tests/: conftest.py  test_adversarial.py  test_baseline_counterexamples.py  test_benchmark_comparison.py  test_benchmark_failure_classification.py  test_confusion.py  test_cross_source_report.py  test_gold.py  test_invalid_fixtures.py  test_leakage.py  test_loop.py  test_mapping.py  test_metamorphic.py  test_mujoco_backend.py  test_mujoco_dispatch.py  test_package_metadata.py  test_real_camera_calibration_authoring.py  test_real_camera_cli.py  test_real_camera_manual_calibration.py  test_real_camera_rollout.py  test_real_camera_tracks.py  test_real_camera_visualize.py  test_release_audit.py  test_release_manifest.py  test_release_rehearsal.py  test_rh20t_cli.py  test_rh20t_rollout.py  test_rlbench_articulation_event.py  test_rlbench_mutations.py  test_rlbench_object_inside_container.py  test_rlbench_pilot.py  test_separation.py  test_validity.py  test_validity_checks.py  test_verify_release.py
(+331 files in other folders)
