[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "csg"
version = "0.3.0"
description = "Arm-Bounded Demonstration Compiler — leakage-clean compiler/verifier loop for fixed-base robotic-arm manipulation"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
# Base install is intentionally dependency-free: the verifier loop (compiler,
# extractor, matcher, benchmark, symbolic backend) is pure standard library, so
# the frozen verifier has no third-party surface. Physics simulation is opt-in.
dependencies = []
keywords = ["robotics", "csg", "benchmark", "mujoco", "manipulation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
# The MuJoCo arm backend (roadmap Phase 2C). Pulls in numpy transitively.
# numpy must never be imported outside csg/backends/mujoco/.
sim = ["mujoco>=3.9"]

[project.scripts]
csg-benchmark = "csg.benchmark:main"
csg-matcher = "csg.matcher:main"
csg-release-audit = "csg.release_audit:main"
csg-release-rehearsal = "csg.release_rehearsal:main"
csg-rollout-extract = "csg.rollout_extract:main"
csg-skills = "csg.skills:main"
csg-solver = "csg.solver:main"
csg-to-sim = "csg.to_sim:main"

[tool.setuptools]
packages = ["csg", "csg.backends", "csg.backends.mujoco"]

[tool.pytest.ini_options]
testpaths = ["tests"]
