[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "csg"
version = "0.3.2"
description = "Arm-Bounded Demonstration Compiler — leakage-clean compiler/verifier loop for fixed-base robotic-arm manipulation"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
# The release tooling parses pyproject.toml with the stdlib `tomllib`, which is
# Python 3.11+. The core verifier loop is otherwise pure standard library.
requires-python = ">=3.11"
# Base install is intentionally dependency-free: the verifier loop (compiler,
# extractor, matcher, benchmark, symbolic backend) is pure standard library, so
# the frozen verifier has no third-party surface. Physics simulation is opt-in.
dependencies = []
keywords = ["robotics", "csg", "benchmark", "mujoco", "manipulation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
# The MuJoCo arm backend (roadmap Phase 2C). Pulls in numpy transitively.
# numpy must never be imported outside csg/backends/mujoco/.
# Bounded so a future MuJoCo minor cannot silently change physics floats out
# from under the recorded evidence; the exact version is recorded in
# release_manifest.json ("environment.sim.mujoco"). Released evidence: 3.9.0.
sim = ["mujoco>=3.9,<3.10"]
# Test/dev tooling. Opt-in only — the runtime package stays dependency-free.
dev = ["pytest"]
# RLBench external-trace pilot (pilots/rlbench/, OUTSIDE the csg package). RLBench
# and PyRep are not on PyPI and need a CoppeliaSim install, so they are documented
# here as the pilot's external requirements rather than pinned wheels — install per
# https://github.com/stepjam/RLBench (PyRep first, then RLBench). numpy is the only
# PyPI piece the adapter's array handling needs; it must never be imported by csg/.
# The rollout-assembly + verifier seam (pilots/rlbench/, tests/test_rlbench_pilot.py)
# runs with NONE of these installed — only live RLBench demo ingest requires them.
rlbench = ["numpy>=1.24"]

[project.scripts]
csg-benchmark = "csg.benchmark:main"
csg-matcher = "csg.matcher:main"
csg-release-audit = "csg.release_audit:main"
csg-release-manifest = "csg.release_manifest:main"
csg-release-rehearsal = "csg.release_rehearsal:main"
csg-rollout-extract = "csg.rollout_extract:main"
csg-skills = "csg.skills:main"
csg-solver = "csg.solver:main"
csg-to-sim = "csg.to_sim:main"
csg-verify-release = "csg.verify_release:main"

[tool.setuptools]
packages = ["csg", "csg.backends", "csg.backends.mujoco"]

[tool.pytest.ini_options]
testpaths = ["tests"]
